Add support for building java 15 examples
This also adds the first JDK 15 example of using records.

Bug: 169692487
Bug: 141587937
Change-Id: I3ed7800dc16b9f08510d5bd77b658d5891b98707